# cube_problem

./: Cargo.toml  README.md
src/: main.rs
