[package]
name = "cube_problem"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Gagnon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["cargo"] }
kiss3d = "0.35.0"
#nalgebra = "0.32.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
